# Anti-Gravital

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
ag-cli/: Cargo.toml
ag-cli/src/: main.rs
ag-cli/src/commands/: bench.rs  build.rs  deploy.rs  dev.rs  generate.rs  mod.rs  new.rs  schema.rs  trace.rs
ag-core/: Cargo.toml
ag-core/benches/: bus_throughput.rs  handler_throughput.rs
ag-core/src/: app.rs  config.rs  lib.rs
ag-core/src/bus/: mod.rs  notifier.rs  ring_buffer.rs  slot.rs
ag-core/src/core/: context.rs  error.rs  mod.rs  router.rs
ag-core/src/dsl/: mod.rs
ag-core/src/shield/: http.rs  layer.rs  mod.rs
ag-dsl/: Cargo.toml
ag-dsl/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  semantic.rs
ag-dsl/src/codegen/: mod.rs  openapi.rs  rust.rs  typescript.rs
ag-modules/ag-auth/: Cargo.toml
ag-modules/ag-auth/src/: lib.rs
ag-modules/ag-cache/: Cargo.toml
ag-modules/ag-cache/src/: lib.rs
ag-modules/ag-data/: Cargo.toml
ag-modules/ag-data/src/: lib.rs
ag-modules/ag-observability/: Cargo.toml
ag-modules/ag-observability/src/: lib.rs
ag-modules/ag-realtime/: Cargo.toml
ag-modules/ag-realtime/src/: lib.rs
ag-modules/ag-storage/: Cargo.toml
ag-modules/ag-storage/src/: lib.rs
ag-modules/ag-ui/: Cargo.toml
ag-modules/ag-ui/src/: lib.rs
ag-runtime/: go.mod
ag-runtime/brain/: context.go  dispatch.go  handler.go  router.go  router_test.go
ag-runtime/bus/: reader.go  ring_buffer.go  ring_buffer_test.go
ag-runtime/modules/: README.md
ag-wasm/host/: README.md
benchmarks/: go.mod
benchmarks/comparison/: README.md
benchmarks/internal/: bus_bench_test.go
docs/: BLUEPRINT_v3.md  architecture.md  getting-started.md  schema-reference.md
examples/ai-backend/: README.md
examples/ecommerce-api/: README.md
examples/hello-world/: README.md
examples/realtime-chat/: README.md
examples/todo-api/: README.md
plugins/: README.md
templates/rest/: schema.ag
