[workspace]
resolver = "2"
members = [
    "ag-core",
    "ag-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gravital Labs <labs@gravital.dev>"]
license = "Apache-2.0"
repository = "https://github.com/angelnereira/anti-gravital"
homepage = "https://antigravital.dev"
documentation = "https://docs.antigravital.dev"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "color"] }
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true
