[workspace]
resolver = "2"
members = [
    "ag-core",
    "ag-dsl",
    "ag-cli",
    "ag-modules/ag-auth",
    "ag-modules/ag-data",
    "ag-modules/ag-realtime",
    "ag-modules/ag-cache",
    "ag-modules/ag-storage",
    "ag-modules/ag-ui",
    "ag-modules/ag-observability",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Gravital Labs <labs@gravital.dev>"]
license = "Apache-2.0"
repository = "https://github.com/gravital-labs/anti-gravital"
homepage = "https://antigravital.dev"
documentation = "https://docs.antigravital.dev"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "timeout", "compression-gzip"] }
hyper = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4", features = ["derive", "color"] }

# Benchmarks
criterion = { version = "0.5", features = ["async_tokio"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
debug = true
