[package]
name = "ag"
description = "Anti-Gravital CLI: project scaffolding, code generation, and development tooling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ag"
path = "src/main.rs"

[dependencies]
ag-core = { path = "../ag-core" }
ag-dsl = { path = "../ag-dsl" }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
